# fleet-telemetry-hub

./: .gitignore  ABSTRACTION_SUMMARY.md  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
config/: telemetry_config.yaml
examples/: pipeline_advanced_example.py  pipeline_example.py  test_abstractions.py  usage_examples.py
src/fleet_telemetry_hub/: __init__.py  client.py  pipeline.py  pipeline_partitioned.py  provider.py  registry.py  schema.py
src/fleet_telemetry_hub/common/: __init__.py  file_io.py  logger.py  partitioned_file_io.py  truststore_context.py
src/fleet_telemetry_hub/config/: __init__.py  config_models.py  loader.py
src/fleet_telemetry_hub/models/: __init__.py  motive_requests.py  motive_responses.py  samsara_requests.py  samsara_responses.py  shared_request_models.py  shared_response_models.py
src/fleet_telemetry_hub/operations/: __init__.py  fetch_data.py  motive_funcs.py  samsara_funcs.py
src/fleet_telemetry_hub/utils/: __init__.py  fetch_data.py  file_io.py  logger.py  motive_funcs.py  samsara_funcs.py  truststore_context.py
tests/: conftest.py  test_client.py  test_file_io.py  test_pipeline.py  test_provider.py  test_registry.py  test_schema.py
tests/_endpoints/: test_samsara_datetime_serialization.py  test_vehicle_utilization.py
